# CLIronChef

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GEMINI.md  LICENSE  MANIFEST.in  NOTICE  README.md  SAFETY.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  recipe_proposal.md
.github/workflows/: ci.yml
data/modes/: README.md  af04_modes.json  af04_probe_presets.json
docs/: README.md
docs/assets/: README.md
docs/cooking/: CARRYOVER.md  COOK_LIFECYCLE.md  LESSONS_LEARNED.md  MODES.md  PROBE.md  RECIPES.md
docs/getting-started/: GETTING_STARTED_AI_AGENT.md  GETTING_STARTED_HUMAN.md  SETUP.md
docs/project/: FAQ.md  NOTIFICATION_CHANNELS.md  PRIVACY.md  PUBLIC_RELEASE_CHECKLIST.md  TROUBLESHOOTING.md
docs/reference/: ARCHITECTURE.md  CLI_REFERENCE.md  HARDWARE.md  PROTOCOL.md
examples/: README.md  cook_salmon_walkthrough.md  python_api_example.py
recipes/: README.md  chicken_breast.json  chicken_thighs.json  fish_white.json  pork_tenderloin.json  salmon_basic.json  salmon_gourmet.json  schema.json  steak_reverse_sear.json
scripts/: gen_cli_reference.py  leak_scan.sh  preflight.py  status.py
src/cliron_chef/: __init__.py  __main__.py  api.py  cli.py  modes.py  mqtt_client.py  runner.py  watcher.py
tests/: test_cli_doc_consistency.py  test_docs_links.py  test_modes.py  test_recipes.py  test_warm_hold_validation.py
