[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cliron-chef"
version = "0.1.0"
description = "CLI / AI-agent control of the Typhur Dome 2 air fryer and Sync ONE wireless probe"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["typhur", "air-fryer", "iot", "cooking", "cli", "ai-agent", "dome2", "sync-one"]
authors = [
  {name = "CLIronChef contributors"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Home Automation",
  "Topic :: System :: Hardware",
]
dependencies = [
  "paho-mqtt>=1.6.1,<2.0",
  "requests>=2.28.0",
  "urllib3>=1.26.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
]

[project.scripts]
cliron-chef = "cliron_chef.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/cliron-chef/recipes" = ["recipes/*.json"]
"share/cliron-chef/data/modes" = ["data/modes/*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = [
  "E501",   # line length handled by formatter
  "UP006",  # keep Python 3.9-compatible typing style
  "UP035",
  "UP037",
  "UP045",
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]
"scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
